# fork-pegasus

./: .gitignore  Cargo.toml  README.md
base/: Cargo.toml
base/src/: communicate.rs  error.rs  execute.rs  lib.rs  rpc.rs
channel/: Cargo.toml
channel/src/: abort.rs  alloc.rs  block.rs  builder.rs  data.rs  eos.rs  error.rs  lib.rs
channel/src/base/: inter_processes.rs  intra_process.rs  intra_thread.rs  mod.rs
channel/src/buffer/: batch.rs  decoder.rs  mod.rs  pool.rs
channel/src/error/: mod.rs  pull.rs  push.rs
channel/src/event/: emitter.rs  mod.rs
channel/src/input/: handle.rs  mod.rs  proxy.rs
channel/src/output/: builder.rs  delta.rs  handle.rs  mod.rs  output.rs  proxy.rs  unify.rs
channel/src/output/batched/: aggregate.rs  broadcast.rs  evented.rs  mod.rs
channel/src/output/streaming/: batching.rs  mod.rs  partition.rs
common/: Cargo.toml
common/src/: buffer.rs  channel.rs  config.rs  lib.rs  rc.rs  tag.rs
dataflow/: Cargo.toml
dataflow/src/: channel.rs  consume.rs  context.rs  error.rs  lib.rs
executor/: Cargo.toml
executor/src/: reactor.rs
graph/: Cargo.toml
graph/examples/: graph_load.rs
graph/src/: lib.rs  topo.rs
memory/: Cargo.toml
network/: Cargo.toml
network/examples/: echo_benchmark.rs
network/src/: config.rs  error.rs  lib.rs  manager.rs  state.rs
network/tests/: ipc_test.rs
pegasus/: Cargo.toml
pegasus/examples/: apply.rs  logistic_regression.rs  logistic_regression_distributed.rs  page_rank.rs  ping_pong.rs
pegasus/src/: channel.rs  config.rs  dataflow.rs  graph.rs  lib.rs  progress.rs  resource.rs  stream.rs  worker.rs  worker_id.rs
pegasus/tests/: binary_test.rs  join_test.rs  limit_test.rs  merge_test.rs  other_tests.rs
server/: Cargo.toml
server/examples/: dynlib_service.rs  echo_service.rs
server/proto/: job_service.proto
server/src/: consumer.rs  job.rs  lib.rs  producer.rs  rpc.rs
server/src/client/: connection.rs  errors.rs  mod.rs
server/src/cluster/: standalone.rs
server/src/naming/: mod.rs
service/: Cargo.toml
test/: pegasus-entry.sh
(+130 files in other folders)
