[package]
name = "pegasus_channel"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ahash = "0.7"
nohash-hasher = "0.2.0"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
enum_dispatch = "0.3"
smallvec = "1.9"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["sync", "rt"] }
pegasus_common = { path = "../common" }
pegasus_server = { path = "../server" }