[package]
name = "pegasus_executor"
version = "0.1.0"
authors = ["chenqiang.mcq <chenqiang.mcq@alibaba-inc.com>"]
edition = "2021"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
num_cpus = "1.13"
pegasus_common = { path = "../common" }
pegasus_memory = { path = "../memory" }
