[package]
name = "pegasus_server"
version = "1.0.0"
edition = "2021"


[dependencies]
log = "0.4"
once_cell = "1.5.2"
async-trait = "0.1"
bytes = "1.1.0"
nohash-hasher = "0.2.0"
anyhow = "1.0"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
valley = { path = "../../valley" }
pegasus_common = { path = "../common" }